--- a/templates/lista.html
+++ b/templates/lista.html
@@ -89,9 +89,9 @@
 </head>
 <body>
     <div class="container">
-        <div style="position: absolute; top: 20px; right: 20px; font-size: 18px; font-weight: bold; color: #333;">
+        <!-- <div style="position: absolute; top: 20px; right: 20px; font-size: 18px; font-weight: bold; color: #333;">
             {{ user_info }}
-        </div>
+        </div> -->
         <h1>Lista Trem</h1>
         <div class="search-bar">
             <input
